--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--added bootstrap and google font-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>Work Day Scheduler</title>
@@ -11,24 +14,110 @@
 
 <body>
 
-    <div class="header">
-        <h1>Work Day Scheduler</h1>
-        <P>A simple calendar app for scheduling your work day.</P>
-    </div>
-    <!--placeholder list until api is complete-->
-    <ul>
-        <li>9am</li>
-        <li>10am</li>
-        <li>11am</li>
-        <li>12pm</li>
-        <li>1pm</li>
-        <li>2pm</li>
-        <li>3pm</li>
-        <li>4pm</li>
-        <li>5pm</li>
-    </ul>
+    <!--adjusted header and made grids-->
+    <header class="jumbotron">
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <P class="lead">A simple calendar app for scheduling your work day.</P>
+        <p id="currentDay" Class="Day"></p>
+    </header>
 
-    <!--added Javascript link-->
+    <div class="container">
+
+		<div id="hour8" class="row time-block">
+            <div class="col-md-1 hour">
+                8 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour9" class="row time-block">
+            <div class="col-md-1 hour">
+                9 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour10" class="row time-block">
+            <div class="col-md-1 hour">
+                10 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour10=1" class="row time-block">
+            <div class="col-md-1 hour">
+                11 AM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour12" class="row time-block">
+            <div class="col-md-1 hour">
+                12 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour13" class="row time-block">
+            <div class="col-md-1 hour">
+                1 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour14" class="row time-block">
+            <div class="col-md-1 hour">
+                2 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour15" class="row time-block">
+            <div class="col-md-1 hour">
+                3 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour16" class="row time-block">
+            <div class="col-md-1 hour">
+                4 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+		<div id="hour17" class="row time-block">
+            <div class="col-md-1 hour">
+                5 PM
+            </div>
+            <textarea class="col-md-10 description">
+            </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+	</div>
+      
+    <!--Added Moment and jquery links-->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script type="text/JavaScript" src="https://momentjs.com/downloads/moment.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
